--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "piexifjs": "^1.0.6"
+    "piexifjs": "^1.0.6",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "husky": "^8.0.3"
